# noisedc

./: .env.example  .gitattributes  .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  LICENSE-DATA  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: config.example.yaml  params.yaml
data/: README.md
data/processed/amostras/: README.md  anomalia_AC10_seg0000.npy  anomalia_AC10_seg0001.npy  normal_AC09_seg0000.npy  normal_AC09_seg0001.npy
deploy/: README.md
deploy/grafana/: dashboard-linha-c.sanitizado.json
deploy/zabbix/: template-snitch-inrow.sanitizado.yaml
docs/: PENDENCIA-hiperparametros-camada3.md  arquitetura.md  dicionario-de-dados.md  hardware.md  protocolo-coleta.md  reprodutibilidade.md  zabbix-grafana.md
docs/mapeamento-sistematico/: README.md
notebooks/: README.md
scripts/: baixar_dados.sh  criar_estrutura.sh  gerar_dados_exemplo.py  run_pipeline.sh  verificar_dados_sensiveis.sh
src/noisedc/: __init__.py  config.py  dataset.py
src/noisedc/acquisition/: __init__.py  transferir.py
src/noisedc/evaluation/: __init__.py  metrics.py  protocols.py  run.py
src/noisedc/features/: __init__.py  descriptors.py  extract.py
src/noisedc/integration/: __init__.py  run.py  zabbix.py
src/noisedc/legado/: __init__.py  camada3_autoritativo_linha_c.py  reconstrucao_camada2_extracao_features.py  reconstrucao_camada4_integracao_zabbix.py
src/noisedc/models/: __init__.py  registry.py  train.py
src/noisedc/preprocessing/: __init__.py  audio.py  run.py  segmentation.py  spectral_subtraction.py
src/noisedc/viz/: __init__.py  build_figures.py
tests/: conftest.py  test_acquisition.py  test_config.py  test_evaluation.py  test_features.py  test_integration.py  test_models.py  test_pipeline_e2e.py  test_preprocessing.py
tests/fixtures/: README.md
(+1 files in other folders)
