[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "noisedc"
version = "1.0.0"
description = "Arquitetura para monitoramento e detecção de anomalias acústicas em data centers"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Renan Moura da Silva" }]
keywords = [
    "monitoramento acustico", "data center", "deteccao de anomalias",
    "aprendizado de maquina", "mfcc", "zabbix", "iot",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "librosa>=0.10",
    "soundfile>=0.12",
    "scikit-learn>=1.3",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "joblib>=1.3",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5", "nbstripout>=0.7"]

[project.urls]
Repositorio = "https://github.com/USUARIO/noisedc"

[project.scripts]
noisedc-preprocessar = "noisedc.preprocessing.run:principal"
noisedc-treinar = "noisedc.models.train:principal"
noisedc-avaliar = "noisedc.evaluation.run:principal"
noisedc-figuras = "noisedc.viz.build_figures:principal"
noisedc-publicar = "noisedc.integration.run:principal"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]
